# Rpa_captura_orcamento

./: .gitignore  README.md  pyproject.toml
app/: DistribuiçãoCriterios.py  OrcamentoSGO.py  RateiosSGO.py
app/util/: api_token.py
